--- a/frontend/src/app/complete-payment/complete-payment.component.html
+++ b/frontend/src/app/complete-payment/complete-payment.component.html
@@ -10,7 +10,9 @@
                     <div class="card-text">
                         Content Lorem ipsum dolor sit amet <b>consectetur adipisicing elit.</b>Perspiciatis earum fugiat mollitia aspernatur totam cupiditatesed praesentium voluptates odio ipsum suscipit quaerat quia ipsam quidem  <b>Click on the button bellow</b> To complete your transaction commodi recusandae doloremque, sapiente tenetur.
                     </div>
-                  <button class="payment-btn mt-3" type="submit" (click)="completeTrasnsaction()">Complete Payment</button>
+                  <button class="payment-btn mt-3" type="submit" (click)="completeTrasnsaction()">Complete Payment
+                    <span class="fa fa-circle-o-notch fa-spin" style='font-size:"19px"' *ngIf="spinner"></span>
+                  </button>
                 </div>
                 <div class="card-footer border-0 bg-white">
                     <span class="float-right">
